--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 <body>
 <!----- HEADER START---> 
 <div class="pimg1">
-    <div class="ptext">
+    <div class="ptext1">
         <span class="border">
             Baseball's WAR Values in Relation to Player Performance
         </span>
         <nav id="desktop-nav">
             <ul>
-                <li><a href="#nav1">Slide 1</a></li>
+                <li><a href="#nav1">Description</a></li>
                 <li><a href="#nav2">Slide 2</a></li>
                 <li><a href="#nav3">Slide 3</a></li>
                 <li><a href="#nav4">Interactive Charts</a></li>
@@ -26,7 +26,7 @@
 </div>
 <!-- Section One -->
 <section class="section section-dark" id="nav1">
-    <h1>Section One</h1>
+    <h1>Description</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi aut perferendis ipsam recusandae excepturi fugit impedit non, provident similique nemo. Ducimus, autem harum aspernatur assumenda voluptas distinctio ex optio a?
     </p>
 </section> 
@@ -53,6 +53,7 @@
     </div>
 </div>
 
+<!-- Section Three -->
 <section class="section section-dark" id="nav3">
     <h2>Section 3</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum aperiam veniam delectus ipsum voluptas eius, ducimus, tempore qui mollitia numquam molestias necessitatibus fuga impedit enim alias aspernatur distinctio voluptates nihil!
@@ -67,12 +68,14 @@
     </div>
 </div>
 
+<!-- Section Four: Interactive Charts-->
 <section class="section section-dark" id="nav4">
-    <h2>Section 4</h2>
+    <h2>Charts</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum aperiam veniam delectus ipsum voluptas eius, ducimus, tempore qui mollitia numquam molestias necessitatibus fuga impedit enim alias aspernatur distinctio voluptates nihil!
     </p>
-</section>
-
+    
+<!-- Tableau Embed Code: WAR VS Contract Completed  Desktop Size-->
+<div class='tableauPlaceholder' id='viz1615011587001' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;WA&#47;WARtopercentcontractcompleteddashboard0_3&#47;Dashboard1&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='WARtopercentcontractcompleteddashboard0_3&#47;Dashboard1' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;WA&#47;WARtopercentcontractcompleteddashboard0_3&#47;Dashboard1&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1615011587001');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.minWidth='1000px';vizElement.style.maxWidth='1100px';vizElement.style.width='100%';vizElement.style.minHeight='3927px';vizElement.style.maxHeight='4027px';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.minWidth='1000px';vizElement.style.maxWidth='1100px';vizElement.style.width='100%';vizElement.style.minHeight='3927px';vizElement.style.maxHeight='4027px';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';} else { vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*1.77)+'px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
 <script src=""https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js""></script>
 <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 </body>
