--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
 <!-- Section One -->
 <section class="section section-dark" id="nav1">
     <h1>Description</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi aut perferendis ipsam recusandae excepturi fugit impedit non, provident similique nemo. Ducimus, autem harum aspernatur assumenda voluptas distinctio ex optio a?
+    <p>There are many different metrics to measure how good or valuable a baseball player is throughout a season. One such metric is Wins Above Replacement or WAR. WAR is an attempt by the sabermetric baseball community to summarize a player’s total contributions to their team in one statistic. You should always use more than one metric at a time when evaluating players, but WAR is all-inclusive and provides a useful reference point for comparing players.
+        WAR offers an estimate to answer the question, “If this player got injured and their team had to replace them with a freely available minor leaguer or a AAAA player from their bench, how much value would the team be losing?”
+        This value is expressed in a wins format, so we could say that Player X is worth +6.3 wins to their team while Player Y is only worth +3.5 wins, which means it is highly likely that Player X has been more valuable than Player Y.
     </p>
 </section> 
 
